# socialia

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  INSTRUCTIONS.md  Makefile  README.md  _template.md  codecov.yml  pyproject.toml  requirements.txt
.github/ci/: build-in-sif.sh  exec-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: auto-merge-to-develop.yaml  ci.yml  cla.yml  import-smoke-on-ubuntu-py3-12.yml  newb-docs-quality-on-ubuntu-latest.yml  newb.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  release.yml  rtd-sphinx-build-on-ubuntu-latest.yml  socialia-quality-audit-on-ubuntu-latest.yml  sync-main-to-release-tag-on-push.yml  sync-main.yml
.scitex/dev/: cli-audit-dict.yaml  config.yaml
automation/: instagram.md  linkedin.md  medium.md  reddit.md  twitter.md  youtube.md
docs/: SETUP.md
docs/sphinx/: cli.rst  conf.py  index.rst  installation.rst  mcp.rst  quickstart.rst  requirements.txt
docs/sphinx/api/: socialia.rst
examples/: 00_run_all.sh  01_post_twitter.py  02_post_linkedin.py  03_thread_twitter.py  04_analytics.py  05_feed_and_replies.py  06_schedule_posts.py
figrecipe/: README.md
figrecipe/drafts/: 2025-0103-reddit-dataisbeautiful.md  2025-0105-reddit-datavisualization.md
figrecipe/posted/2025-0101-reddit-visualization/: 2025-0101-reddit-visualization.md  assessment.md
figrecipe/posted/2026-0101-linkedin/: 2026-0101-linkedin.md
projects/figrecipe/: README.md
projects/figrecipe/drafts/: 2026-0116-linkedin-mcp-server.md  2026-0116-reddit-python-mcp.md
projects/scitex/: AI_AGENT_MANIFESTO.md
projects/scitex/docs/: philosophy.md
projects/scitex/drafts/: 2026-0103-twitter.md  2026-0105-note-scitex-io.md  2026-0105-reddit-scitex-io.md  2026-0105-reddit-scitex-stats.md  2026-0106-twitter-scitex-fig.md  2026-0108-reddit-opensource-feedback.md  (+2 more)
projects/template-project/: README.md
scitex/: README.md  medium-strategy.md
scitex/drafts/: 2026-0105-linkedin-scitex-io.md  2026-0105-linkedin-scitex-stats.md  2026-0105-medium-scitex-io.md  2026-0105-medium-scitex-stats.md  2026-0105-note-scitex-stats.md  2026-0105-twitter-scitex-io.md  2026-0105-twitter-scitex-stats.md  2026-0107-linkedin-automated-science-and-scitex.md  2026-0107-linkedin-automated-science.md  2026-0107-twitter-automated-science-and-scitex.md  2026-0107-twitter-automated-science.md
scitex/formats/: medium-ja.md  reddit-en.md  twitter-en.md
scitex/modules/: README.md  _template.md
scripts/: setup.sh
signatures/: cla.json
src/: __init__.py  base.py  instagram_poster.py  linkedin_poster.py  medium_poster.py  reddit_poster.py  tiktok_poster.py  twitter_poster.py  youtube_poster.py
src/socialia/: __init__.py  __main__.py  _base.py  _branding.py  _paths.py  _server.py  _twitter_growth.py  _twitter_media.py  _twitter_read_backend.py  _twitter_read_backend_getxapi.py  analytics.py  base.py  cli.py  linkedin.py  mcp_server.py  org.py  org_files.py  reddit.py  scheduler.py  slack.py  twitter.py  youtube.py  youtube_batch.py
tests/: __init__.py  conftest.py  test_analytics.py  test_base.py  test_cli.py  test_feed_commands.py  test_linkedin.py  test_mcp_server.py  test_org.py  test_scheduler.py  test_skills_quality.py  test_twitter.py  test_twitter_read_backend.py  test_twitter_read_backend_getxapi.py
tests/develop/: __init__.py  test_audit.py
tests/examples/: test_01_post_twitter.py  test_02_post_linkedin.py  test_03_thread_twitter.py  test_04_analytics.py  test_05_feed_and_replies.py  test_06_schedule_posts.py
tests/integration/: test_cross_package_imports.py
(+64 files in other folders)
