[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialia"
version = "0.2.1"
description = "Unified social media management - posting, analytics, and insights"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
authors = [
    {name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai"}
]
keywords = ["social-media", "twitter", "cli", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests-oauthlib>=1.3.0",
    "requests>=2.28.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
reddit = ["praw>=7.7.0"]
mcp = ["mcp>=1.0.0"]
analytics = ["google-analytics-data>=0.18.0"]
youtube = ["google-api-python-client>=2.100.0", "google-auth-oauthlib>=1.1.0"]
dev = ["pytest", "ruff"]
all = ["praw>=7.7.0", "mcp>=1.0.0", "google-analytics-data>=0.18.0", "google-api-python-client>=2.100.0", "google-auth-oauthlib>=1.1.0"]

[project.scripts]
socialia = "socialia.cli:main"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/socialia"
Repository = "https://github.com/ywatanabe1989/socialia"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
